--- a/backend2/config.yaml
+++ b/backend2/config.yaml
@@ -2,10 +2,10 @@
 name: backend2
 ecosystem: fuel
 networks:
-- id: 0
+- id: 9898
   start_block: 0
   hyperfuel_config:
-   url: https://mainnet2.hypersync.xyz`
+   url: https://mainnet2.hypersync.xyz
   contracts:
   - name: mirav1mainnet
     address:
